Prevent scrollbars for login and register

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    /*overflow: hidden;*/ /* Prevent scrollbars */
+    overflow: hidden; /* Prevent scrollbars */
     box-sizing: border-box;
     background-color: transparent;
 }
